--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -2,18 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="static/favicon.webp" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABRA Tools</title>
-    <script type="module" crossorigin src="static/index.js"></script>
-    <link rel="stylesheet" crossorigin href="static/index.css">
-    <link rel="stylesheet" crossorigin href="static/output.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Vite + React + TS</title>
+    <script type="module" crossorigin src="/assets/index-BUU067-5.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-D1M_zsgi.css">
   </head>
   <body>
     <div id="root"></div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
