--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -631,6 +631,14 @@ body{
   position: relative;
 }
 
+.inset-0{
+  inset: 0px;
+}
+
+.left-2{
+  left: 0.5rem;
+}
+
 .right-2{
   right: 0.5rem;
 }
@@ -641,6 +649,10 @@ body{
 
 .top-2{
   top: 0.5rem;
+}
+
+.top-2\.5{
+  top: 0.625rem;
 }
 
 .z-\[100\]{
@@ -659,6 +671,14 @@ body{
   margin-right: 0.5rem;
 }
 
+.mt-1{
+  margin-top: 0.25rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -667,12 +687,20 @@ body{
   display: inline-flex;
 }
 
+.table{
+  display: table;
+}
+
 .grid{
   display: grid;
 }
 
 .hidden{
   display: none;
+}
+
+.aspect-video{
+  aspect-ratio: 16 / 9;
 }
 
 .h-10{
@@ -689,6 +717,10 @@ body{
 
 .h-4{
   height: 1rem;
+}
+
+.h-48{
+  height: 12rem;
 }
 
 .h-5{
@@ -709,10 +741,6 @@ body{
 
 .max-h-screen{
   max-height: 100vh;
-}
-
-.min-h-\[100px\]{
-  min-height: 100px;
 }
 
 .min-h-\[80px\]{
@@ -759,6 +787,10 @@ body{
   max-width: 28rem;
 }
 
+.max-w-sm{
+  max-width: 24rem;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -787,6 +819,10 @@ body{
 
 .animate-spin{
   animation: spin 1s linear infinite;
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -879,6 +915,10 @@ body{
   margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
 }
 
+.overflow-auto{
+  overflow: auto;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -919,6 +959,10 @@ body{
   border-color: hsl(var(--border));
 }
 
+.border-destructive{
+  border-color: hsl(var(--destructive));
+}
+
 .border-input{
   border-color: hsl(var(--input));
 }
@@ -943,6 +987,14 @@ body{
   background-color: hsl(var(--destructive));
 }
 
+.bg-green-500\/20{
+  background-color: rgb(34 197 94 / 0.2);
+}
+
+.bg-muted{
+  background-color: hsl(var(--muted));
+}
+
 .bg-primary{
   background-color: hsl(var(--primary));
 }
@@ -953,6 +1005,14 @@ body{
 
 .bg-transparent{
   background-color: transparent;
+}
+
+.bg-yellow-500\/20{
+  background-color: rgb(234 179 8 / 0.2);
+}
+
+.p-0{
+  padding: 0px;
 }
 
 .p-1{
@@ -980,6 +1040,11 @@ body{
   padding-right: 0.5rem;
 }
 
+.px-2\.5{
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -995,6 +1060,16 @@ body{
   padding-right: 2rem;
 }
 
+.py-0\.5{
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1002,6 +1077,10 @@ body{
 
 .pb-2{
   padding-bottom: 0.5rem;
+}
+
+.pl-8{
+  padding-left: 2rem;
 }
 
 .pr-8{
@@ -1012,12 +1091,28 @@ body{
   padding-top: 0px;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
 .pt-6{
   padding-top: 1.5rem;
 }
 
+.text-left{
+  text-align: left;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-right{
+  text-align: right;
+}
+
+.font-mono{
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-2xl{
@@ -1045,6 +1140,11 @@ body{
   line-height: 1.75rem;
 }
 
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -1055,6 +1155,10 @@ body{
 
 .font-semibold{
   font-weight: 600;
+}
+
+.capitalize{
+  text-transform: capitalize;
 }
 
 .leading-none{
@@ -1073,12 +1177,21 @@ body{
   color: hsl(var(--card-foreground));
 }
 
+.text-destructive{
+  color: hsl(var(--destructive));
+}
+
 .text-destructive-foreground{
   color: hsl(var(--destructive-foreground));
 }
 
 .text-foreground\/50{
   color: hsl(var(--foreground) / 0.5);
+}
+
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity, 1));
 }
 
 .text-muted-foreground{
@@ -1095,6 +1208,11 @@ body{
 
 .text-secondary-foreground{
   color: hsl(var(--secondary-foreground));
+}
+
+.text-yellow-500{
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity, 1));
 }
 
 .underline-offset-4{
@@ -1468,6 +1586,14 @@ body{
     top: auto;
   }
 
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .sm\:flex-col{
     flex-direction: column;
   }
@@ -1490,5 +1616,9 @@ body{
 @media (min-width: 1024px){
   .lg\:grid-cols-3{
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
