--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABRA</title>
-    <script type="module" crossorigin src="/assets/index-CW_gJty-.js"></script>
+    <title>Vite + React + TS</title>
+    <script type="module" crossorigin src="/assets/index-C93eaH7u.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-CICDbnvV.css">
   </head>
   <body>
