--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -679,6 +679,10 @@ body{
   z-index: 100;
 }
 
+.col-span-full{
+  grid-column: 1 / -1;
+}
+
 .mb-2{
   margin-bottom: 0.5rem;
 }
@@ -701,6 +705,10 @@ body{
 
 .mt-2{
   margin-top: 0.5rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .flex{
@@ -873,6 +881,10 @@ body{
 
 .animate-spin{
   animation: spin 1s linear infinite;
+}
+
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-2{
@@ -1151,6 +1163,11 @@ body{
   padding-bottom: 1rem;
 }
 
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-2{
   padding-bottom: 0.5rem;
 }
@@ -1284,6 +1301,11 @@ body{
 
 .text-primary-foreground{
   color: hsl(var(--primary-foreground));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .text-secondary-foreground{
