--- a/backend/static/output.css
+++ b/backend/static/output.css
@@ -899,6 +899,10 @@ body{
   animation: spin 1s linear infinite;
 }
 
+.resize{
+  resize: both;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
