--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/assets/index-7IZpfmnU.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-CHbd_aTs.css">
+    <script type="module" crossorigin src="/assets/index-DeSSF8ff.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-DGGYENss.css">
   </head>
   <body>
     <div id="root"></div>
