--- a/backend/static/output.css
+++ b/backend/static/output.css
@@ -1089,6 +1089,10 @@ body{
   background-color: hsl(var(--destructive));
 }
 
+.bg-foreground{
+  background-color: hsl(var(--foreground));
+}
+
 .bg-green-500{
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
@@ -1302,6 +1306,11 @@ body{
 
 .text-accent-foreground{
   color: hsl(var(--accent-foreground));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
 .text-card-foreground{
@@ -1561,6 +1570,10 @@ body{
 
 .hover\:opacity-100:hover{
   opacity: 1;
+}
+
+.focus\:border-primary:focus{
+  border-color: hsl(var(--primary));
 }
 
 .focus\:opacity-100:focus{
